@@ -29,14 +29,23 @@ class WC_REST_Payments_Orders_Controller extends WC_Payments_REST_Controller {
 	private $gateway;
 
 	/**
+	 * WC_Payments_Customer_Service instance for working with customer information
+	 *
+	 * @var WC_Payments_Customer_Service
+	 */
+	private $customer_service;
+
+	/**
 	 * WC_Payments_REST_Controller constructor.
 	 *
-	 * @param WC_Payments_API_Client   $api_client - WooCommerce Payments API client.
-	 * @param WC_Payment_Gateway_WCPay $gateway - WooCommerce Payments payment gateway.
+	 * @param WC_Payments_API_Client       $api_client       WooCommerce Payments API client.
+	 * @param WC_Payment_Gateway_WCPay     $gateway          WooCommerce Payments payment gateway.
+	 * @param WC_Payments_Customer_Service $customer_service Customer class instance.
 	 */
-	public function __construct( WC_Payments_API_Client $api_client, WC_Payment_Gateway_WCPay $gateway ) {
+	public function __construct( WC_Payments_API_Client $api_client, WC_Payment_Gateway_WCPay $gateway, WC_Payments_Customer_Service $customer_service ) {
 		parent::__construct( $api_client );
-		$this->gateway = $gateway;
+		$this->gateway          = $gateway;
+		$this->customer_service = $customer_service;
 	}
 
 	/**
@@ -57,12 +66,22 @@ class WC_REST_Payments_Orders_Controller extends WC_Payments_REST_Controller {
 				],
 			]
 		);
+		register_rest_route(
+			$this->namespace,
+			$this->rest_base . '/(?P<order_id>\d+)/create_customer',
+			[
+				'methods'             => WP_REST_Server::CREATABLE,
+				'callback'            => [ $this, 'create_customer' ],
+				'permission_callback' => [ $this, 'check_permission' ],
+			]
+		);
 	}
 
 	/**
 	 * Given an intent ID and an order ID, add the intent ID to the order and capture it.
 	 *
 	 * @param WP_REST_Request $request Full data about the request.
+	 * @return WP_REST_Response|WP_Error Response object on success, or WP_Error object on failure.
 	 */
 	public function capture_terminal_payment( $request ) {
 		try {
@@ -117,6 +136,51 @@ class WC_REST_Payments_Orders_Controller extends WC_Payments_REST_Controller {
 			);
 		} catch ( \Throwable $e ) {
 			Logger::error( 'Failed to capture a terminal payment via REST API: ' . $e );
+			return new WP_Error( 'wcpay_server_error', __( 'Unexpected server error', 'woocommerce-payments' ), [ 'status' => 500 ] );
+		}
+	}
+
+	/**
+	 * Returns customer id from order. Create or update customer if needed.
+	 *
+	 * @param WP_REST_Request $request Full data about the request.
+	 * @return WP_REST_Response|WP_Error Response object on success, or WP_Error object on failure.
+	 */
+	public function create_customer( $request ) {
+		try {
+			$order_id = $request['order_id'];
+
+			// Do not process non-existing orders.
+			$order = wc_get_order( $order_id );
+			if ( false === $order || ! ( $order instanceof WC_Order ) ) {
+				return new WP_Error( 'wcpay_missing_order', __( 'Order not found', 'woocommerce-payments' ), [ 'status' => 404 ] );
+			}
+
+			$order_user        = $order->get_user();
+			$customer_id       = $order->get_meta( '_stripe_customer_id' );
+			$customer_data     = WC_Payments_Customer_Service::map_customer_data( $order );
+			$is_guest_customer = false === $order_user;
+
+			// If the order is created for a registered customer, try extracting it's Stripe customer ID.
+			if ( ! $customer_id && ! $is_guest_customer ) {
+				$customer_id = $this->customer_service->get_customer_id_by_user_id( $order_user->ID );
+			}
+
+			$order_user  = $is_guest_customer ? new WP_User() : $order_user;
+			$customer_id = $customer_id
+				? $this->customer_service->update_customer_for_user( $customer_id, $order_user, $customer_data )
+				: $this->customer_service->create_customer_for_user( $order_user, $customer_data );
+
+			$order->update_meta_data( '_stripe_customer_id', $customer_id );
+			$order->save();
+
+			return rest_ensure_response(
+				[
+					'id' => $customer_id,
+				]
+			);
+		} catch ( \Throwable $e ) {
+			Logger::error( 'Failed to create / update customer from order via REST API: ' . $e );
 			return new WP_Error( 'wcpay_server_error', __( 'Unexpected server error', 'woocommerce-payments' ), [ 'status' => 500 ] );
 		}
 	}
